--- a/temple.html
+++ b/temple.html
@@ -32,6 +32,43 @@
                 <div class="bigCircle"></div>
         </div> 
     <div id="page-wrapper">
+            <div id="toplink" >
+            <ul class="nav justify-content-end container">
+                    
+                    <li class="nav-item">
+                      <a class="nav-link active" href="#">Active</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link disabled" href="#">Disabled</a>
+                    </li>
+                
+                  </ul>
+                </div>
+       <!-- <div id="toplink" class="container">
+
+            <span> <a href="http://www.fgs.org.tw/">首頁</a> | <a href='javascript:TSC("big5")'>繁體中文版</a> | <a href='javascript:TSC("gb")'>簡體中文版</a>
+                | <a href="http://www.fgs.org.tw/en/" target="_blank">English</a> | <a href="http://www.fgs.org.tw/fgs-child/index.htm"
+                    target="_blank">兒童版</a> | <a href="http://www.fgs.org.tw/fgs/fgs_traffic.aspx" target="_blank">交通食宿</a> |
+                <a href="http://www.fgs.org.tw/qa/qa_list.aspx" target="_blank">聯絡我們</a> | <a href="http://www.fgs.org.tw/sitemap.aspx">網站導覽</a>
+                | <a href="http://www.fgs.org.tw/member/member_choose.aspx">會員登入</a></span>
+
+
+            <span id="search">
+
+                <h5><img src="../../../image/search.png"></h5>
+                <label for="textfield"></label>
+                <input type="text" name="searchtext" id="searchtext">
+                <input type="image" name="uc2$ImageButton1" id="uc2_ImageButton1" src="image/searchbtn.png">
+
+            </span>
+            <div class="clearfix"></div>
+        </div>-->
       <!--top logo menu-->
       <div id="top-bar" class="row bg_color_white"><div class="container">
           <!--登入前 class="row bg_color_black"-->
@@ -40,7 +77,7 @@
                 <div class="logo"></div>
               </div>
               <div class="col-8">
-              <nav th:if="${player==null}" class="navbar row bg_color_white color_black_grey2 u-mt-24">
+              <nav th:if="${player==null}" class="navbar row bg_color_white color_black_grey2 u-mt-16">
                 <ul class="ul_nav">
                     <li class="li_nav">
                         <a href="#">首頁</a></li>
