--- a/temple.html
+++ b/temple.html
@@ -47,8 +47,14 @@
                     <li class="nav-item">
                       <a class="nav-link disabled" href="#">Disabled</a>
                     </li>
-                
+                    <li>
+                        <form class="form-inline my-2 my-lg-0">
+                            <input class="form-control mr-sm-2 py-0 form-control-sm" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-warning py-0 my-sm-0 form-control-sm" type="submit">Search</button>
+                          </form>
+                    </li>
                   </ul>
+                 
                 </div>
        <!-- <div id="toplink" class="container">
 
