--- a/temple.html
+++ b/temple.html
@@ -200,7 +200,7 @@
             </section>
 
           </div>
-
+<!-- <jdoc:include type="modules" name="position-7" style="none" />-->
           <div class="row bg_color_white u-pt-32 u-pb-32 u-pl-40 u-pr-40">
                
                 <section class="col-md-5 pr-0">
@@ -260,6 +260,7 @@
     
               </div>
 
+              <!-- <jdoc:include type="modules" name="position-7" style="none" />-->
               <div class="row bg_color_main py-0 u-pl-40 u-pr-40">
                     <section class="col-md-5">
                         <div class="row">
