--- a/temple.html
+++ b/temple.html
@@ -47,12 +47,12 @@
                     <li class="nav-item">
                       <a class="nav-link disabled" href="#">Disabled</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <form class="form-inline my-2 my-lg-0">
                             <input class="form-control mr-sm-2 py-0 form-control-sm" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-warning py-0 my-sm-0 form-control-sm" type="submit">Search</button>
                           </form>
-                    </li>
+                    </li> -->
                   </ul>
                  
                 </div>
@@ -78,12 +78,12 @@
       <!--top logo menu-->
       <div id="top-bar" class="row bg_color_white"><div class="container">
           <!--登入前 class="row bg_color_black"-->
-          <div class="row">
-              <div class="col-4 u-pl-0">
+          <div class="row top-bar-row">
+              <div class="col-4 u-pl-0" id="logo-div">
                 <div class="logo"></div>
               </div>
-              <div class="col-8">
-              <nav th:if="${player==null}" class="navbar row bg_color_white color_black_grey2 u-mt-16">
+              <div class="col">
+              <nav th:if="${player==null}" class="navbar row bg_color_white color_black_grey2"> <!--u-mt-16-->
                 <ul class="ul_nav">
                     <li class="li_nav">
                         <a href="#">首頁</a></li>
